add js for components

--- a/src/oformlenie-samovivoz.html
+++ b/src/oformlenie-samovivoz.html
@@ -28,7 +28,7 @@
           </div>
           <div class="cart-container">
             <div class="col">
-              <a href="#" class="link">Войти в учетную запись</a>
+              <a data-fancybox href="#login" class="link">Войти в учетную запись</a>
               <form class="checkout woocommerce-checkout">
                 <div class="form-item">
                   <p class="form-title">Данные покупателя</p>
@@ -255,6 +255,7 @@
   </main>
 
   @@include('template/footer.html')
+  @@include('template/modals.html')
 
   @@include('template/scripts.html')
 
