--- a/src/widgets/cart.html
+++ b/src/widgets/cart.html
@@ -33,11 +33,10 @@
               </div>
               <div class="col">
                 <div class="quantity">
-                  <input type="number" name="quantity" value="1" min="1" max="" step="1" placeholder="" inputmode="numeric">
-                  <div class="quantity-btns">
+                  <label class="screen-reader-text" for="quantity_productid1">Керамический обогреватель FLYME 450P</label>
+                  <input type="number" id="quantity_productid1" class="input-text qty text" name="quantity" value="1" aria-label="Product quantity" size="4" min="1" max="" step="1" placeholder="" inputmode="numeric" autocomplete="off">
                     <button class="btn-reset quantity-plus"><i class="icomoon icon-chevron"></i></button>
                     <button class="btn-reset quantity-minus"><i class="icomoon icon-chevron"></i></button>
-                  </div>
                 </div>
               </div>
               <div class="col">
@@ -75,11 +74,10 @@
               </div>
               <div class="col">
                 <div class="quantity">
-                  <input type="number" name="quantity" value="1" min="1" max="" step="1" placeholder="" inputmode="numeric">
-                  <div class="quantity-btns">
+                  <label class="screen-reader-text" for="quantity_productid2">Керамический обогреватель FLYME 450P</label>
+                  <input type="number" id="quantity_productid2" class="input-text qty text" name="quantity" value="1" aria-label="Product quantity" size="4" min="1" max="" step="1" placeholder="" inputmode="numeric" autocomplete="off">
                     <button class="btn-reset quantity-plus"><i class="icomoon icon-chevron"></i></button>
                     <button class="btn-reset quantity-minus"><i class="icomoon icon-chevron"></i></button>
-                  </div>
                 </div>
               </div>
               <div class="col">
