--- a/src/widgets/catalog.html
+++ b/src/widgets/catalog.html
@@ -30,7 +30,7 @@
           Фильтры <div id="catSidebarClose"><i class="icomoon icon-remove"></i></div>
         </div>
         <button class="link filter-reset">Очистить фильтры</button>
-        <div class="catalog__sidebar-item catalog__sidebar-item-open">
+        <div class="catalog__sidebar-item">
           <h3 class="catalog__sidebar-title">Категории</h3>
           <div class="catalog__sidebar-body">
             <ul class="catalog__sidebar-list">
@@ -44,7 +44,7 @@
             </ul>
           </div>
         </div>
-        <div class="catalog__sidebar-item catalog__sidebar-item-open">
+        <div class="catalog__sidebar-item">
           <h3 class="catalog__sidebar-title">Наличие</h3>
           <div class="catalog__sidebar-body">
             <label for="nalichie" class="checkbox">
@@ -52,7 +52,7 @@
             </label>
           </div>
         </div>
-        <div class="catalog__sidebar-item catalog__sidebar-item-open">
+        <div class="catalog__sidebar-item">
           <h3 class="catalog__sidebar-title">Цена</h3>
           <div class="catalog__sidebar-body">
             <div class="catalog__sidebar-price">
@@ -76,7 +76,7 @@
             </div>
           </div>
         </div>
-        <div class="catalog__sidebar-item catalog__sidebar-item-open">
+        <div class="catalog__sidebar-item">
           <h3 class="catalog__sidebar-title">Цвет</h3>
           <div class="catalog__sidebar-body">
             <label for="vse" class="checkbox">
