--- a/src/widgets/review-form.html
+++ b/src/widgets/review-form.html
@@ -26,12 +26,13 @@
         <div class="form-group">
           <div class="form-group-title">Выберите оценку</div>
           <div class="rating-btns">
-            <img src="img/rating-star.svg" alt="">
-            <img src="img/rating-star.svg" alt="">
-            <img src="img/rating-star.svg" alt="">
-            <img src="img/rating-star.svg" alt="">
-            <img src="img/rating-star.svg" alt="">
+            <img class="star" src="img/rating-star.svg" alt="">
+            <img class="star" src="img/rating-star.svg" alt="">
+            <img class="star" src="img/rating-star.svg" alt="">
+            <img class="star" src="img/rating-star.svg" alt="">
+            <img class="star" src="img/rating-star.svg" alt="">
           </div>
+          <input type="hidden" name="stars" value="">
         </div>
         <div class="form-group">
           <label for="politika" class="checkbox">
