--- a/src/cartbar.html
+++ b/src/cartbar.html
@@ -115,6 +115,8 @@
   </main>
 
   @@include('template/footer.html')
+  @@include('template/modals.html')
+  
   @@include('template/scripts.html')
 
 </body>
