--- a/src/widgets/catalog.html
+++ b/src/widgets/catalog.html
@@ -55,24 +55,22 @@
         <div class="catalog__sidebar-item">
           <h3 class="catalog__sidebar-title">Цена</h3>
           <div class="catalog__sidebar-body">
-            <div class="catalog__sidebar-price">
+            <div class="catalog__sidebar-price" id="sidebarPrice-value">
                 <div class="form-group">
                   <label for="" class="form-label">
                     <div class="wallet">€</div>
-                    <input type="number" class="form-input" min="0,00" placeholder="0,00">
+                    <input type="number" class="form-input" id="sidebarPrice-min" min="0,00">
                   </label>
                 </div>
                 <div class="form-group">
                   <label for="" class="form-label">
                     <div class="wallet">€</div>
-                    <input type="number" class="form-input" max="9999,00" placeholder="9999,00">
+                    <input type="number" class="form-input" id="sidebarPrice-max" max="9999,00">
                   </label>
                 </div>
             </div>
-            <div class="range">
-              <div class="range-button range-button-min"></div>
-              <div class="range-line"></div>
-              <div class="range-button range-button-max"></div>
+            <div class="sidebarPrice-wrapper">
+              <div id="sidebarPrice"></div>
             </div>
           </div>
         </div>
